Criação da entidade Usuario
Criação da entidade Usuario

--- a/barbearia/src/main/resources/templates/index.html
+++ b/barbearia/src/main/resources/templates/index.html
@@ -11,11 +11,14 @@
 <script src="./js/controller/atendimento-controller.js"></script>
 <script src="./js/controller/servico-controller.js"></script>
 <script src="./js/controller/servico-detalhe-controller.js"></script>
+<script src="./js/controller/login-controller.js"></script>
 </head>
 <body>
 	<a href="/servico">Servicos</a>
 	<br>
 	<a href="/atendimento">Atendimentos</a>
+	<br>
+	<a href="/login">Login</a>
 	<div ng-view></div>
 </body>
 </html>
