--- a/barbearia/src/main/resources/static/view/login.html
+++ b/barbearia/src/main/resources/static/view/login.html
@@ -2,9 +2,9 @@
 
 	<form ng-submit="autenticar()">
 			<label>Usuário</label>
-			<input type="text" ng-model="usuario.user">
+			<input type="text" ng-model="usuario.login">
 			<label>Senha</label >
-			<input type="password" ng-model="usuario.pass">
+			<input type="password" ng-model="usuario.senha">
 			
 			<input type="submit" value="Autenticar">
 	</form>
