Autenticação com Jwt
Autenticação com Jwt

--- a/barbearia/src/main/resources/templates/index.html
+++ b/barbearia/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 <script src="./js/controller/servico-controller.js"></script>
 <script src="./js/controller/servico-detalhe-controller.js"></script>
 <script src="./js/controller/login-controller.js"></script>
+<script src="./js/interceptor/token-interceptor.js"></script>
 </head>
 <body>
 	<a href="/servico">Servicos</a>
